# dynamic-occupancy-grid-map

./: .clang-tidy  .gitignore  AUTHORS.md  CMakeLists.txt  LICENSE  OccupancyGridKernel.cu  OccupancyGridKernel.h  OccupancyGridMap.cu  OccupancyGridMap.h  README.md  local_pipeline_ubuntu.sh  main.cu
.github/workflows/: ccpp.yml  cmake_build.yml  format.yml  lint.yml  ubuntu_build.yml  unit_tests.yml  windows_build.yml
demo/: main.cpp  measurements.h
dogm/: .clang-format  CMakeLists.txt  dogm-config.cmake.in  package.xml
dogm/cmake/: DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  GoogleTestDownloadAndBuild.cmake
dogm/demo/: CMakeLists.txt  dbscan.h  image_creation.h  main.cpp  measurements.h  precision_evaluator.h  simulator.h
dogm/demo/simulator/: CMakeLists.txt  simulator.cpp
dogm/demo/simulator/include/mapping/: laser_to_meas_grid.h
dogm/demo/simulator/include/mapping/kernel/: measurement_grid.h
dogm/demo/simulator/include/mapping/opengl/: renderer.h  texture.h
dogm/demo/simulator/mapping/: laser_to_meas_grid.cu
dogm/demo/simulator/mapping/kernel/: measurement_grid.cu
dogm/demo/simulator/mapping/opengl/: framebuffer.cpp  polygon.cpp  renderer.cpp  shader.cpp  texture.cpp
dogm/demo/simulator/test/: CMakeLists.txt  simulator_spec.cpp
dogm/demo/utils/: CMakeLists.txt  color_wheel_adder.cpp  dbscan.cpp  image_creation.cpp  metrics.cpp  precision_evaluator.cpp  simulator.cpp  timer.cpp
dogm/demo/utils/include/: IClock.h  clock.h  color_wheel_adder.h  dbscan.h  iclock.h  image_creation.h  metrics.h  precision_evaluator.h  simulator.h  timer.h  types.h
dogm/demo/utils/test/: CMakeLists.txt  simulator_spec.cpp  timer_spec.cpp
dogm/include/: common.h  cuda_utils.h  dogm.h  dogm_types.h  occupancy_grid_map.h
dogm/include/dogm/: common.h  cuda_utils.h  dogm.h  dogm_types.h
dogm/include/dogm/kernel/: ego_motion_compensation.h  init.h  init_new_particles.h  mass_update.h  measurement_grid.h  particle_to_grid.h  predict.h  resampling.h  resampling_parallel.h  statistical_moments.h  update_persistent_particles.h
dogm/include/dogm/opengl/: framebuffer.h  polygon.h  renderer.h  shader.h  texture.h
dogm/include/kernel/: init.h  init_new_particles.h  mass_update.h  measurement_grid.h  particle_to_grid.h  predict.h  resampling.h  statistical_moments.h  update_persistent_particles.h
dogm/include/opengl/: renderer.h  shader.h
dogm/src/: .clang-tidy  dogm.cu  occupancy_grid_map.cu
dogm/src/kernel/: ego_motion_compensation.cu  init.cu  init_new_particles.cu  mass_update.cu  measurement_grid.cu  particle_to_grid.cu  predict.cu  resampling.cu  resampling_parallel.cu  statistical_moments.cu  update_persistent_particles.cu
dogm/src/opengl/: framebuffer.cpp  polygon.cpp  renderer.cpp  shader.cpp  texture.cpp
dogm/test/: CMakeLists.txt  dogm_spec.cpp
dogm_msgs/: CMakeLists.txt  package.xml
dogm_msgs/msg/: DynamicOccupancyGrid.msg  GridCell.msg  GridMapInfo.msg
dogm_ros/: CMakeLists.txt  package.xml
dogm_ros/cmake/modules/: FindDOGM.cmake
dogm_ros/include/dogm_ros/: DOGMRosConverter.h  dogm_node.h  dogm_ros.h  dogm_ros_converter.h
dogm_ros/src/: DOGMRosConverter.cpp  dogm_ros_node.cpp  dogm_ros_nodelet.cpp
dogm_ros/src/dogm_ros/: dogm_node.cpp  dogm_ros_converter.cpp
dogm_rviz_plugin/: CMakeLists.txt  package.xml  plugin_description.xml
dogm_rviz_plugin/include/dogm_rviz_plugin/: dogm_display.h
dogm_rviz_plugin/src/: DOGMDisplay.cpp  dogm_display.cpp
include/: common.h  cuda_utils.h  occupancy_grid_map.h
include/kernel/: init.h  init_new_particles.h  mass_update.h  measurement_grid.h  particle_to_grid.h  predict.h  resampling.h  statistical_moments.h  update_persistent_particles.h
include/opengl/: framebuffer.h  polygon.h  renderer.h  shader.h  texture.h
occupancy_grid_map/: common.h  cuda_utils.h  init.cu  init_new_particles.cu  mass_update.cu  occupancy_grid_map.cu  occupancy_grid_map.h  particle_to_grid.cu  predict.cu  resampling.cu  statistical_moments.cu  update_persistent_particles.cu
src/: main.cpp  occupancy_grid_map.cu
src/kernel/: init.cu  init_new_particles.cu  mass_update.cu  measurement_grid.cu  particle_to_grid.cu  predict.cu  resampling.cu  statistical_moments.cu  update_persistent_particles.cu
src/opengl/: framebuffer.cpp  polygon.cpp  renderer.cpp  shader.cpp  texture.cpp
