<?xml version="1.0"?>
<package format="2">
  <name>dogm_msgs</name>
  <version>1.0.0</version>
  <description>Dynamic occupancy grid map message type.</description>
  <maintainer email="michael.koesel@uni-ulm.de">Michael Kösel</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/TheCodez/dynamic-occupancy-grid-map</url>
  <url type="bugtracker">https://github.com/TheCodez/dynamic-occupancy-grid-map/issues</url>
  <author email="michael.koesel@uni-ulm.de">Michael Kösel</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
