<?xml version="1.0"?>
<package>
  <name>dogm_rviz_plugin</name>
  <version>1.0.0</version>
  <description>RViz plugin for displaying Dynamic occupancy grid map messages.</description>
  <maintainer email="michael.koesel@uni-ulm.de">Michael Kösel</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/TheCodez/dynamic-occupancy-grid-map</url>
  <url type="bugtracker">https://github.com/TheCodez/dynamic-occupancy-grid-map/issues</url>
  <author email="michael.koesel@uni-ulm.de">Michael Kösel</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>dogm_msgs</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>dogm_msgs</run_depend>
  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
